static/css/base.css
/* Navbar */

/* navbar */
.navbar-default {
    background-color: #F8F8F8;
    border-color: #E7E7E7;
}

/* link */
.navbar-default .navbar-nav > li > a {
    color: #777;
}
.navbar-default .navbar-nav > li > a:hover,
.navbar-default .navbar-nav > li > a:focus {
    color: #222;
}
.navbar-default .navbar-nav > .active > a, 
.navbar-default .navbar-nav > .active > a:hover, 
.navbar-default .navbar-nav > .active > a:focus {
    color: white;
    background-color: #0f7f12;
}
.navbar-default .navbar-nav > .open > a, 
.navbar-default .navbar-nav > .open > a:hover, 
.navbar-default .navbar-nav > .open > a:focus {
    color: #555;
    background-color: #0f7f12;
}

/* brand */
.navbar-default .navbar-brand:hover,
.navbar-default .navbar-brand:focus {
    color: #0f7f12;
}

/* title */
.navbar-header .navbar-brand {
    color: #0f7f12;
}

/* Jumbotron */

.jumbotron {
  background: linear-gradient( rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.3)), url('/images/blur_patterns.jpg') no-repeat;
  background-size: 100%;
  margin-bottom: 0px;
  height: 300px;
  color: white;
}

.jumbotron p {
  font-size: 22px;
}

/* Signin */

#signin {
  display: -webkit-box;
  -webkit-box-orient: horizontal;
  display: -moz-box;
  -moz-box-orient: horizontal;
  display: box;
  box-orient: horizontal;
  padding: 1em;
  background-color: whiteSmoke;
  border-bottom: 1pt solid #E5E5E5;
}

#signinStatusContainer {
  -webkit-box-flex: 1;
  -moz-box-flex: 1;
  box-flex: 1;
  display: -webkit-box;
  display: -moz-box;
  display: box;
}

#signinStatusContainer > :not(.visible) {
  display: none;
}

/* Body */

body {
    padding-top: 40px;
    padding-bottom: 40px;
    background-color: #eaeaea;
    /*background-color: #82a8d5;*/
}

blockquote {
    margin-bottom: 10px;
    border-left-color: #bbb;
}

/* Links */

a:link {
    text-decoration: none;
}

a:hover {
    color: #20BB35;
}

/* Table */

.table-hover {
  max-width: 100%;
  border-collapse: collapse;
  border-radius: 1px;
  border-style: hidden;  /*hide standard table (collapsed) border */
}

.table-hover th {
  background-color: green;
  color: white;
}

.table-hover th:first-child {
  border-radius: 3px 0 0 0;
}

.table-hover th:last-child {
  border-radius: 0 3px 0 0;
}

.table-hover > tbody > tr:hover {
  background-color: #fbf8e9;
}

/* Forms */

form {
  margin-top: 10px;
}

form label {
  width: 90px;
  /*display: inline-block;*/
}

.form-control {
  max-width: 45%;
}

.form-signin input[type="text"] {
  font-size: 16px;
  height: auto;
  margin-bottom: 15px;
  padding: 7px 9px;
}

#submit {
  margin-top: 80px;
}

#cancel {
  position: relative;
  left: 25px;
}

/* Rows */

.row {
  margin-left: 0px;
  margin-top: 10px;
  overflow: scroll;
}

